--- a/perceptron/single_perceptron.ipynb
+++ b/perceptron/single_perceptron.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,21 +39,21 @@
     "\n",
     "X = np.vstack((data_blob1, data_blob2))\n",
     "# Label the first blob as 1 and the second blob as 0\n",
-    "labels = np.vstack((np.ones((N//2,1)), np.zeros((N//2,1))))"
+    "labels = np.vstack((np.ones((N//2,1)), -np.ones((N//2,1))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x12b8732b0>"
+       "<matplotlib.collections.PathCollection at 0x12ba6d930>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -73,11 +73,121 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now pick some weights that affect the input to change the output."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.8831507 ],\n",
+       "       [-1.34775906]])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w = np.random.randn(2,1)\n",
+    "w"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And based on the perception algorithm output I can classify if given point is a 1 or a 0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def model(x, w):\n",
+    "\t# x is shaped (N, 2)\n",
+    "\t# w is shaped (2, 1)\n",
+    "\treturn np.sign(x@w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.],\n",
+       "       [-1.],\n",
+       "       [ 1.],\n",
+       "       [ 1.],\n",
+       "       [-1.],\n",
+       "       [-1.],\n",
+       "       [ 1.],\n",
+       "       [ 1.],\n",
+       "       [ 1.],\n",
+       "       [ 1.],\n",
+       "       [-1.],\n",
+       "       [ 1.],\n",
+       "       [ 1.],\n",
+       "       [ 1.],\n",
+       "       [ 1.],\n",
+       "       [-1.],\n",
+       "       [ 1.],\n",
+       "       [-1.],\n",
+       "       [ 1.],\n",
+       "       [-1.],\n",
+       "       [-1.],\n",
+       "       [-1.],\n",
+       "       [-1.],\n",
+       "       [-1.],\n",
+       "       [-1.],\n",
+       "       [-1.],\n",
+       "       [-1.],\n",
+       "       [-1.],\n",
+       "       [-1.],\n",
+       "       [-1.],\n",
+       "       [-1.],\n",
+       "       [-1.],\n",
+       "       [-1.],\n",
+       "       [-1.],\n",
+       "       [-1.],\n",
+       "       [-1.],\n",
+       "       [ 1.],\n",
+       "       [-1.],\n",
+       "       [-1.],\n",
+       "       [-1.],\n",
+       "       [-1.],\n",
+       "       [ 1.],\n",
+       "       [-1.],\n",
+       "       [-1.],\n",
+       "       [-1.],\n",
+       "       [-1.],\n",
+       "       [-1.],\n",
+       "       [-1.],\n",
+       "       [-1.],\n",
+       "       [-1.]])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model(X, w)"
+   ]
   }
  ],
  "metadata": {
