--- a/perceptron/single_perceptron.ipynb
+++ b/perceptron/single_perceptron.ipynb
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -221,14 +221,27 @@
     "        np.linspace(minX[0], maxX[0], num_guesses_dim),\n",
     "        np.linspace(minX[1], maxX[1], num_guesses_dim)\n",
     "    )\n",
-    "    _X = np.array([x0, x1]).transpose([2,1,0]).reshape(-1, 2)\n",
-    "    guesses = model(_X, w).reshape((num_guesses_dim, num_guesses_dim)).T\n",
+    "    _X = np.array([x0, x1]) # (2, d, d)\n",
+    "    _X = _X.transpose([1,2,0]) # (d, d, 2)\n",
+    "    _X = _X.reshape(-1, 2) # (d*d, 2)\n",
+    "\n",
+    "    guesses = model(_X, w) # (d*d, 1)\n",
+    "    guesses = guesses.reshape((num_guesses_dim, num_guesses_dim)) # (d,d)\n",
     "    plt.contourf(x0, x1, guesses)\n",
     "    plt.colorbar()\n",
+    "\n",
+    "    # then just plot the train points too to see how we match\n",
     "    plt.scatter(X[:, 0], X[:, 1], edgecolors=\"black\", c=model(X, w))\n",
     "\n",
     "plot_guess(X)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
