--- a/perceptron/single_perceptron.ipynb
+++ b/perceptron/single_perceptron.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,16 +45,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x12cfe2680>"
+       "<matplotlib.collections.PathCollection at 0x1165ab460>"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "       [1.]])"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
        "       [-4.87308791, -4.59801064,  1.        ]])"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        "       [-1.]])"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -463,6 +463,7 @@
     "\n",
     "\n",
     "w = np.ones((3,1))\n",
+    "w_history = [w.copy()]\n",
     "iter = 0\n",
     "for _ in range(2):\n",
     "\tfor i in range(N):\n",
@@ -472,6 +473,7 @@
     "\t\tw = update_step(w, x_i, y_i, y_pred)\n",
     "\t\tprint(\"ITER\", iter+1, \"Accuracy:\", accuracy(model, X, w, labels))\n",
     "\t\titer += 1\n",
+    "\t\tw_history.append(w.copy())\n",
     "plot_guess(X, w)"
    ]
   }
