--- a/boltzmann/boltzmann_machine.ipynb
+++ b/boltzmann/boltzmann_machine.ipynb
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -151,22 +151,41 @@
        "array([[0.41007221, 0.79617325, 0.20057984]])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "set_hidden_state = np.array([[1, 0, 0, 0, 0, 1]])\n",
-    "prob_unit_on(set_hidden_state, weights.T, T=1) # probs of each visible layer state being 1"
+    "p = prob_unit_on(set_hidden_state, weights.T, T=1) # probs of each visible layer state being 1\n",
+    "p"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def s(probs):\n",
+    "\tr = np.random.rand(*probs.shape)\n",
+    "\tout = np.zeros_like(probs)\n",
+    "\tout[r > probs] = 1\n",
+    "\treturn out\n",
+    "s(p)"
+   ]
   }
  ],
  "metadata": {
