forward and backward

--- a/boltzmann/boltzmann_machine.ipynb
+++ b/boltzmann/boltzmann_machine.ipynb
@@ -186,6 +186,54 @@
     "\treturn out\n",
     "s(p)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 1., 0., 1.],\n",
+       "       [0., 1., 1., 1., 1., 0.],\n",
+       "       [0., 0., 1., 0., 0., 1.],\n",
+       "       [0., 0., 0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "forward = s(prob_unit_on(x, weights))\n",
+    "forward"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 1., 1.],\n",
+       "       [0., 1., 1.],\n",
+       "       [1., 1., 1.],\n",
+       "       [0., 1., 1.]])"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "backward = s(prob_unit_on(forward, weights.T))\n",
+    "backward"
+   ]
   }
  ],
  "metadata": {
