--- a/boltzmann/boltzmann_machine.ipynb
+++ b/boltzmann/boltzmann_machine.ipynb
@@ -234,6 +234,49 @@
     "backward = s(prob_unit_on(forward, weights.T))\n",
     "backward"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.40925497465932"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def E(s, w):\n",
+    "\treturn -np.sum(s@w.T)\n",
+    "\n",
+    "E(forward, weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15.500264017459651"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "E(backward, weights.T)"
+   ]
   }
  ],
  "metadata": {
