--- a/fft/fft.ipynb
+++ b/fft/fft.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -29,10 +29,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x12b19df60>]"
+       "[<matplotlib.lines.Line2D at 0x1157d00d0>]"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -208,10 +208,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x12b2b4a60>"
+       "<matplotlib.legend.Legend at 0x1157d2c80>"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -383,10 +383,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x12aabae90>"
+       "<matplotlib.legend.Legend at 0x1159be170>"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -498,13 +498,10 @@
    "source": [
     "def fft(x):\n",
     "\tN = len(x)\n",
-    "\tif N <= 1:\n",
-    "\t\treturn x\n",
-    "\n",
-    "\teven = fft(x[0::2])\n",
-    "\todd = fft(x[1::2])\n",
-    "\tT = [np.exp(-2j * np.pi * k / N) * odd[k] for k in range(N // 2)]\n",
-    "\treturn [even[k] + T[k] for k in range(N // 2)] + [even[k] - T[k] for k in range(N // 2)]\n",
+    "\tif N <= 1: return x\n",
+    "\teven, odd = fft(x[0::2]), fft(x[1::2])\n",
+    "\tT = np.exp(-2j*np.pi*np.arange(N//2)/N)*odd\n",
+    "\treturn np.concatenate((even+T, even-T))\n",
     "\n",
     "plt.plot(np.imag(np.fft.fft(wave)), label='numpy fft')\n",
     "plt.plot(np.imag(fft(wave)), label='custom fft')\n",
@@ -516,13 +513,6 @@
     "plt.legend()\n",
     "plt.show()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
